@@ -1,3 +1,4 @@
-rem TODO set java opt
+rem TODO set maven opt
+set MAVEN_OPTS=-Xmx512m -XX:MaxPermSize=128m
 cd ../../app-re
-mvn clean install
+mvn -T 10 -gs ../WIKI/maven/settings.xml clean install 
